border-bottom => border-top

--- a/GoIT/markup/home/lesson1/css/style1.css
+++ b/GoIT/markup/home/lesson1/css/style1.css
@@ -20,7 +20,7 @@ span{
 	text-align: center;
 }
 .line{
-	border-bottom: 1.5px solid #858585; 
+	border-top: 1.5px solid #858585; 
 }
 body {
 	line-height: 20px;
