--- a/GoIT/markup/home/lesson5/css/style.css
+++ b/GoIT/markup/home/lesson5/css/style.css
@@ -42,3 +42,47 @@ body{
      clear:both;
      display:block;
 }
+.form {
+	width: 560px;
+	margin: 215px auto;
+	background-color: rgba(0,0,0,0.5);
+	color: #cccccc;
+	font-family: Tahoma, Arial, sans-serif;
+	text-align: center;
+	padding: 15px 0;
+}
+.form div{
+	padding: 15px;
+
+}
+.form input{
+	background-color: #0f0f0f;
+	border: none;
+	color: #cccccc;
+	line-height: 35px;
+	width: 280px;
+	border-bottom: 1px solid #474746;
+
+}
+.form input:focus{
+	background-color: #1b5288;
+	border: 1px solid #1b5288;
+	-webkit-box-shadow: 0px 0px 5px 0px rgba(104, 155, 204, 1);
+	-moz-box-shadow:    0px 0px 5px 0px rgba(104, 155, 204, 1);
+	box-shadow:         0px 0px 5px 0px rgba(104, 155, 204, 1);       
+}
+h1{
+	font-size: 24px;
+}
+p{
+	font-size: 14px;
+}
+.bottom-text{
+	font-size: 11px;
+}
+#sibscribe{
+	width: 15px;
+}
+h1{
+	border-color: red;
+}
