--- a/GoIT/markup/home/lesson5/css/style.css
+++ b/GoIT/markup/home/lesson5/css/style.css
@@ -46,7 +46,7 @@ body{
 	width: 560px;
 	margin: 215px auto;
 	background-color: rgba(0,0,0,0.5);
-	color: #cccccc;
+	color: #ffffff;
 	font-family: Tahoma, Arial, sans-serif;
 	text-align: center;
 	padding: 15px 0;
@@ -58,18 +58,18 @@ body{
 .form input{
 	background-color: #0f0f0f;
 	border: none;
-	color: #cccccc;
 	line-height: 35px;
 	width: 280px;
 	border-bottom: 1px solid #474746;
+	color: #ffffff;
 
 }
 .form input:focus{
 	background-color: #1b5288;
 	border: 1px solid #1b5288;
-	-webkit-box-shadow: 0px 0px 5px 0px rgba(104, 155, 204, 1);
-	-moz-box-shadow:    0px 0px 5px 0px rgba(104, 155, 204, 1);
-	box-shadow:         0px 0px 5px 0px rgba(104, 155, 204, 1);       
+	-webkit-box-shadow: 0px 0px 8px 0px rgba(104, 155, 204, 1);
+	-moz-box-shadow:    0px 0px 8px 0px rgba(104, 155, 204, 1);
+	box-shadow:         0px 0px 8px 0px rgba(104, 155, 204, 1);       
 }
 h1{
 	font-size: 24px;
@@ -81,8 +81,44 @@ p{
 	font-size: 11px;
 }
 #sibscribe{
-	width: 15px;
+	width: 20px;
 }
-h1{
-	border-color: red;
+.form div:first-child{
+	border-bottom: 2px rgba(255,255,255,0.5) solid;
+}
+.lines p:first-child {
+  overflow: hidden;
+  position: relative;
+  margin: 0;
+  text-align: center;
+  white-space: nowrap;
+}
+.lines p:first-child:before,
+.lines p:first-child:after {
+  content: '';
+  display: inline-block;
+  position: relative;
+  top: -1px;
+  width: 23%;
+  height: 2px;
+  vertical-align: middle;
+  background: linear-gradient(to bottom, rgba(102,102,102,1) 0%,rgba(102,102,102,1) 50%,rgba(0,0,0,1) 51%,rgba(0,0,0,1) 100%);
+}
+.lines p:first-child:before {
+  left: -10px;
+  margin-left: -50%;
+}
+.lines p:first-child:after {
+  left: 10px;
+  margin-right: -50%;
+}
+.btn{
+	 color: #ffffff;
+	 background: -webkit-linear-gradient(top, rgba(80,174,219,1) 0%,rgba(46,122,196,1) 100%);
+     border-radius: 2px;
+}
+.btnFB{
+	 color: #ffffff;
+	 background: -webkit-linear-gradient(top, rgb(61,86,150) 0%,rgb(48,66,114) 100%);
+     border-radius: 2px;
 }
