add new div and delete clearfix

--- a/GoIT/markup/home/lesson3/css/style.css
+++ b/GoIT/markup/home/lesson3/css/style.css
@@ -52,6 +52,7 @@ body{
 	 float: left;
 	 border: 1px solid #c8c8c8;
 	 margin-top: 45px;
+	  
 }
 .sidebar a{ 
 	 display: block; 
@@ -84,6 +85,7 @@ body{
 	 float:right;
 	 width: 678px;
 	 margin-top: 45px;
+	  
 }
 .content_img{
      border: 1px solid #c8c8c8;
@@ -96,13 +98,14 @@ body{
 	 line-height: 15pt;
 	 color: #2c2c2c;
 	 font-family: sans-serif;
+	  
 }
 
 /*FOOTER*/
 
 .footer{
-	 width:923px;
-	 float: left;
+	 /*width:923px;
+	 float: left;*/
 	 height: 40px; 
 	 margin-top: 60px;
 	 padding: 0 24px; 
