--- a/GoIT/markup/home/lesson5/css/style.css
+++ b/GoIT/markup/home/lesson5/css/style.css
@@ -5,14 +5,34 @@ body{
 	background-image: url('../img/background.jpg');
 	height: 100%;
 	background-size: cover;
+	background-repeat: no-repeat;
+	font-family: "Helvetica Neue Cyr Thin";
+	color: #ffffff;
+	background-color: #092915;
+	font-size: 14px;
+}
+@font-face {
+    font-family: 'Helvetica Neue Cyr Thin';
+    src: url('../fonts/helveticaneuecyr-thin-webfont.eot');
+    src: url('../fonts/helveticaneuecyr-thin-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/helveticaneuecyr-thin-webfont.woff2') format('woff2'),
+         url('../fonts/helveticaneuecyr-thin-webfont.woff') format('woff'),
+         url('../fonts/helveticaneuecyr-thin-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 .header{
 	background-image: url('../img/header-background.jpg');
+
+}
+.header ul{
+	float: right;
 }
 .header li{
 	position: relative;
-    float: right;
+   float: left;
     list-style: none;
+    font-weight: bolder;
 }
 .header li a{
 	position: relative;
@@ -21,21 +41,27 @@ body{
 	line-height: 35px;
 	color: #60b5ed;
 	text-decoration: none;
-	font-size: 14pt;
 }
-
-#anchor-header:before,
-#anchor-header img {
-    content: url('../img/lcon1.png');
-    float: left;
-    position: absolute;
-    left: -13px;
-    top: 2px;
-    
+.header li:nth-child(6)::before{
+	background-image: url('../img/lcon1.png');
+	background-position: center center;
+	content:"";
+	position:absolute;
+	width:41px;
+	height:31px;
+ 	right:115px;
+	top:5%;
 }
-.header li a:hover{
+.header li:last-child{
+	background: linear-gradient(to bottom, rgba(80,175,220,1) 0%,rgba(60,143,206,1) 50%,rgba(46,122,196,1) 100%);
+	margin-right: 20px;
+	height: 33px;
+	border: 1px solid #4299d2;
+}
+.header li a:hover 
+{
 	background-color: #4eabda;
-	color: #ffffff;
+	color: #fff;
 }
 .clearfix:after{
      content:'';
@@ -46,14 +72,11 @@ body{
 	width: 560px;
 	margin: 215px auto;
 	background-color: rgba(0,0,0,0.5);
-	color: #ffffff;
-	font-family: Tahoma, Arial, sans-serif;
 	text-align: center;
 	padding: 15px 0;
 }
 .form div{
 	padding: 15px;
-
 }
 .form input{
 	background-color: #0f0f0f;
@@ -61,8 +84,6 @@ body{
 	line-height: 35px;
 	width: 280px;
 	border-bottom: 1px solid #474746;
-	color: #ffffff;
-
 }
 .form input:focus{
 	background-color: #1b5288;
@@ -73,9 +94,10 @@ body{
 }
 h1{
 	font-size: 24px;
+	font-weight: bold;
 }
-p{
-	font-size: 14px;
+label{
+	color: #ccc;
 }
 .bottom-text{
 	font-size: 11px;
@@ -92,6 +114,7 @@ p{
   margin: 0;
   text-align: center;
   white-space: nowrap;
+  color: #999;
 }
 .lines p:first-child:before,
 .lines p:first-child:after {
@@ -112,13 +135,23 @@ p{
   left: 10px;
   margin-right: -50%;
 }
-.btn{
+/*.btn{
 	 color: #ffffff;
-	 background: -webkit-linear-gradient(top, rgba(80,174,219,1) 0%,rgba(46,122,196,1) 100%);
+	 background: -webkit-linear-gradient(top, rgb(80,174,219) 0%,rgb(46,122,196) 100%);
      border-radius: 2px;
+     cursor: pointer;
 }
 .btnFB{
 	 color: #ffffff;
 	 background: -webkit-linear-gradient(top, rgb(61,86,150) 0%,rgb(48,66,114) 100%);
      border-radius: 2px;
+     cursor: pointer;
+     border-top: 1px solid #7589bb;
+}*/
+input[type=button]{
+	 color: #ffffff;
+	 background: -webkit-linear-gradient(top, rgb(61,86,150) 0%,rgb(48,66,114) 100%);
+     border-radius: 3px;
+     cursor: pointer;
+     border-top: 1px solid #7589bb;
 }
