--- a/GoIT/markup/home/lesson4/css/style.css
+++ b/GoIT/markup/home/lesson4/css/style.css
@@ -44,13 +44,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1acfe3', end
 	 margin: 10px 30px;
 }
 .contries li{
-	 position: relative;
+	/* position: relative;*/
      float: left;
      list-style: none;
      text-align: center;
 }
 .contries li a{
-	 position: relative;
+	 /*position: relative;*/
 	 display: block;
 	 font-size: 8pt;
 	 padding: 10px;
