--- a/GoIT/markup/home/lesson5/css/style.css
+++ b/GoIT/markup/home/lesson5/css/style.css
@@ -24,6 +24,11 @@ body{
 .header{
 	background-image: url('../img/header-background.jpg');
 }
+.header-wrapper{
+	margin: 0 auto;
+	width: 1124px;
+	float: right;
+}
 .header1, .header2{
 	float: right;
 }
@@ -48,6 +53,13 @@ body{
 	background-color: #4eabda;
 	color: #fff;
 }
+.underline-on:hover{
+	text-decoration: underline;
+}
+.underline:hover{
+	text-decoration: none;
+}
+
 .header1 li:last-child{
 	background: linear-gradient(to bottom, rgba(80,175,220,1) 0%,rgba(60,143,206,1) 50%,rgba(46,122,196,1) 100%);
 	margin-right: 20px;
@@ -97,7 +109,7 @@ body{
 	color: #fff; 
 	text-indent: 20px;
 }
-.form input:focus{
+.text-input input:focus{
 	background-color: #1b5288;
 	-webkit-box-shadow: 0px 0px 8px 0px rgba(104, 155, 204, 1);
 	-moz-box-shadow:    0px 0px 8px 0px rgba(104, 155, 204, 1);
@@ -177,6 +189,12 @@ label{
 	font-weight: bold;
 	font-size: 26px;
 	padding: 0px 10px;
+}
+.btn:hover{
+	background: -webkit-linear-gradient(top, rgb(80,174,219) 0%,rgb(46,122,196) 40%);
+}
+.btnFB:hover{
+	background: -webkit-linear-gradient(top, rgb(61,86,150) 0%,rgb(48,66,114) 40%);
 }
 .log{
 	float: left;
