--- a/GoIT/markup/home/lesson5/css/style.css
+++ b/GoIT/markup/home/lesson5/css/style.css
@@ -75,6 +75,12 @@ body{
 	height:31px;
  	right:130px;
 	top:5%;
+
+
+}
+.header1 li:nth-child(1){
+	border-left: 1px solid #56a2dc;
+	padding-left: 5px;
 }
 .header1 li a:nth-child(1){
 	padding: 0px 35px;
