--- a/GoIT/markup/home/lesson6/css/style.css
+++ b/GoIT/markup/home/lesson6/css/style.css
@@ -1,8 +1,9 @@
 .wrapper
 {
-	width: 1000px;
+	width: 908px;
 	margin: 15px auto;
 	font-family: "Lucida Sans Unicode", sans-serif;
+	
 }
 .clearfix:after{
   content: '';
@@ -15,22 +16,19 @@
 /*HEADER*/
 
 
-.banner{
-	
-	height: 236px;
-	background: url(../img/index_banner.jpg) 0 0 no-repeat;
-}
 .pnone{
 	float: left;
 	position: relative;
+	margin-top: 10px;
+	margin-right: 14px;
 }
 .pnone li{
 	float: left;
 	padding-left: 10px;
-	
 }
+
 .pnone li:first-child{
-	margin-left: 22px;
+	margin-left: 19px;
 }
 .pnone span{
 	display: block;
@@ -43,9 +41,57 @@
 	position:absolute;
 	width:22px;
 	height:22px;
-	left:8px;
+	left:6px;
 	bottom: -1px;
 }
+
+.wrapper_login{
+	float: left;
+    width: 500px;
+    margin-bottom: 10px;
+    background-color: background: rgb(30,99,131); 
+    background: -webkit-linear-gradient(rgba(30,99,131,1) 0%, rgba(19,70,106,1) 51%, rgba(13,52,88,1) 100%);
+    background: -o-linear-gradient(rgba(30,99,131,1) 0%, rgba(19,70,106,1) 51%, rgba(13,52,88,1) 100%);
+    background: linear-gradient(rgba(30,99,131,1) 0%, rgba(19,70,106,1) 51%, rgba(13,52,88,1) 100%); 
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e6383', endColorstr='#0d3458',GradientType=0 ); 
+    border: 1px solid;
+    border-color: #a6c3cf #d7e3e8 #4e647a #d7e3e8;
+    border-radius: 5px;
+    box-shadow: -webkit-box-shadow: 5px 5px 5px 0px rgba(192,192,192,1);
+	-moz-box-shadow: 5px 5px 5px 0px rgba(192,192,192,1);
+	box-shadow: 5px 5px 5px 0px rgba(192,192,192,1);
+}
+.wrapper_login section{
+	float: left;
+	padding: 3px 0px 3px 24px;
+	position: relative;
+}
+input{
+	margin-right: 5px;
+	height: 14px;
+}
+
+section:first-child::before{
+	background: url(../img/icone_man.png) 0 0 no-repeat;
+	background-position: center center;
+	content:"";
+	position:absolute;
+	width:14px;
+	height:18px;
+	left:5px;
+}
+.menu_login li{
+	float: right;
+}
+.menu_login li a{
+    display: block;
+    line-height: 25px;
+    color: #000;
+    text-decoration: none;
+    font-size: 10px;
+}
+
+
 .sprite{
 	position: relative;
 	overflow: hidden;
@@ -75,53 +121,52 @@
 	background-position: -39px -12px;
 }
 
+
+.banner{
+	clear: both;
+	height: 236px;
+	background: url(../img/index_banner.jpg) 0 0 no-repeat;
+
+}
+
 /*CONTENT*/
 
-/*header{
-	background-color: red;
-	float: left;
-}
-.top-menu{
+
+.menu_main{
 	background: -webkit-linear-gradient(top, rgba(72,81,96,1) 1%,rgba(32,35,38,1) 26%,rgba(2,2,2,1) 99%);
 	border: 1px solid #14192d;
 	border-radius: 5px;
 	-webkit-box-shadow: 0px 7px 7px 0px rgba(171, 171, 171, 0.7);
 	-moz-box-shadow:    0px 7px 7px 0px rgba(171, 171, 171, 0.7);
 	box-shadow:         0px 7px 7px 0px rgba(171, 171, 171, 0.7);
-	
-	width: 910px;
-	margin: 20px auto;
+	/*width: 910px;*/
+	margin: 8px auto;
 }
-.top-menu li{
+.menu_main li{
 	float: left;  
 }
-.basket{
+.basket {
 	float: right;
 }
 .basket li a{
 	font-size: 11px;
 }
 
-.clearfix:after{
-     content:'';
-     clear:both;
-     display:block;
-}
-.top-menu a{
+.menu_main a{
 	text-decoration: none;
-	line-height: 33px;
+	line-height: 31px;
 	font-size: 13.64px;
 	color: #879093;
 	padding:5px 10px;
 	margin-left: 1px;
 }
-.top-menu  li a:hover{
+.menu_main li a:hover{
 	border-radius: 20px;
 	background: -webkit-linear-gradient(top, rgba(31,103,135,1) 1%,rgba(22,78,112,1) 50%,rgba(12,51,87,1) 99%);
 	color: #ffffff;
 	border-bottom: 1px solid #092036;
 	border-top: 1px solid #25617b;
 }
-*/
+
 
 
