--- a/GoIT/markup/home/lesson5/css/style.css
+++ b/GoIT/markup/home/lesson5/css/style.css
@@ -40,11 +40,11 @@ body{
 }
 .header1 li a, .header2 li a{
 	position: relative;
-	padding: 0px 30px;
 	display: block;
 	line-height: 35px;
 	color: #60b5ed;
 	text-decoration: none;
+	padding: 0px 15px;
 }
 .header1 li a{
 	color: #fff;
@@ -71,23 +71,16 @@ body{
 	background-position: center center;
 	content:"";
 	position:absolute;
-	width:41px;
-	height:31px;
- 	right:130px;
+	width:40px;
+	height:32px;
+ 	right:120px;
 	top:5%;
-
-
-}
-.header1 li:nth-child(1){
 	border-left: 1px solid #56a2dc;
-	padding-left: 5px;
 }
-.header1 li a:nth-child(1){
-	padding: 0px 35px;
+.header2 li:last-child{
+	margin-right: 47px;
 }
-.header2 li a:nth-child(1){
-	padding: 0px 35px;
-}
+
 .underline{
 	text-decoration: underline;
 }
@@ -206,7 +199,7 @@ label{
 	float: left;
 	font-weight: bold;
 	font-size: 14px;
-	padding: 0px 15px;
+	padding: 0px 5px;
 }
 .bla{
 	float: left;
