--- a/GoIT/markup/home/lesson6/css/style.css
+++ b/GoIT/markup/home/lesson6/css/style.css
@@ -95,6 +95,10 @@ section:first-child::before{
 .sprite{
 	position: relative;
 	overflow: hidden;
+	border: 1px solid #c3c9cc;
+	width: 50px;
+	border-radius: 10px;
+	padding: 7px 10px;
 }
 .sprite li{
 	float: left;
@@ -126,7 +130,6 @@ section:first-child::before{
 	clear: both;
 	height: 236px;
 	background: url(../img/index_banner.jpg) 0 0 no-repeat;
-
 }
 
 /*CONTENT*/
@@ -188,6 +191,7 @@ section:first-child::before{
 .search_wheels{
 	width: 232px;
 }
+
 aside{
 	 float: left;
 	 width: 185px;
@@ -231,6 +235,29 @@ figcaption{
 	font-size: 12px;
 	text-align: center;
 }
+.icone_list span{
+	background: url(../img/icone_list.png) 0 0 no-repeat; 
+    padding-left: 25px;
+    width: 25px;
+     
+    font-size: 13px;
+}
+.icone_list{
+	width: 180px;
+	border: 1px solid #465961;
+	border-radius: 25px;
+}
+.icon span{
+	background: url(../img/icon.png) 0 0 no-repeat; 
+    padding-left: 25px;
+    width: 25px;
+    
+}
+.icon {
+	width: 150px;
+	border: 1px solid #465961;
+	border-radius: 25px;
+}
 
 .content li a{
 	text-decoration: none;
@@ -239,10 +266,25 @@ figcaption{
 }
 .content li{
 	color: #465961;
-	background: url(../img//icone_grey.png) no-repeat 0 4px; /* Параметры фона */
+	background: url(../img//icone_grey.png) no-repeat 0 4px; 
     padding-left: 10px;
 }
-
+.btn{
+	 width: 80px;
+	 height: 25px;
+	 color: #ffffff;
+	 background: rgb(31,101,133); /* Old browsers */
+     background: -webkit-linear-gradient(rgba(31,101,133,1) 0%, rgba(22,78,112,1) 50%, rgba(13,52,88,1) 100%);
+     background: -o-linear-gradient(rgba(31,101,133,1) 0%, rgba(22,78,112,1) 50%, rgba(13,52,88,1) 100%);
+     background: linear-gradient(rgba(31,101,133,1) 0%, rgba(22,78,112,1) 50%, rgba(13,52,88,1) 100%); /* FF3.6-15 */ /* Chrome10-25,Safari5.1-6 */ /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1f6585', endColorstr='#0d3458',GradientType=0 ); /* IE6-9 */
+     border:none;
+     cursor: pointer;
+     -webkit-box-shadow: 0px 0px 1px 1px rgba(86,162,221,1);
+     -moz-box-shadow: 0px 0px 1px 1px rgba(86,162,221,1);
+     box-shadow: 0px 0px 1px 1px rgba(86,162,221,1);
+     border-radius: 25px;
+}
 /*FOOTER*/
 
 footer{
@@ -253,7 +295,6 @@ footer{
 
 .footer_menu{
 	float: left;
-
 }
 .footer_menu li{
 	float: left;
@@ -264,11 +305,11 @@ footer{
 	font-size: 11px;
 	color: #bec6c9;
 	padding: 0px 14px;
-
 }
 .footer_menu  li a:hover{
 	color: #458fab;
 }
+
 .copy{
 	padding: 30px 80px;
 }
@@ -278,9 +319,9 @@ footer{
 	color: #7f4740;
 	font-size: 10px;
 }
+
 .footer_photo {
 	
 	height: 90px;
 	background: url(../img/icone_brands.png) center center no-repeat;
-
 }
