--- a/GoIT/markup/home/lesson6/css/style.css
+++ b/GoIT/markup/home/lesson6/css/style.css
@@ -45,9 +45,11 @@
 	bottom: -1px;
 }
 
+/*формочка для логина и регистрации*/
+
 .wrapper_login{
 	float: left;
-    width: 500px;
+    width: 495px;
     margin-bottom: 10px;
     background-color: background: rgb(30,99,131); 
     background: -webkit-linear-gradient(rgba(30,99,131,1) 0%, rgba(19,70,106,1) 51%, rgba(13,52,88,1) 100%);
@@ -60,6 +62,7 @@
     box-shadow: -webkit-box-shadow: 5px 5px 5px 0px rgba(192,192,192,1);
 	-moz-box-shadow: 5px 5px 5px 0px rgba(192,192,192,1);
 	box-shadow: 5px 5px 5px 0px rgba(192,192,192,1);
+     margin-right: 16px;
 }
 .wrapper_login section{
 	float: left;
@@ -80,32 +83,45 @@ section:first-child::before{
 	height:18px;
 	left:5px;
 }
-.menu_login li{
-	float: right;
+
+/*оформление вход\регистрация\забыли пароль*/
+
+.menu_item { 
+	float: left;
+	display: block;
 }
-.menu_login li a{
+.menu_link {
     display: block;
     line-height: 25px;
-    color: #000;
+    color: #fff;
     text-decoration: none;
     font-size: 10px;
+    padding-left: 7px;
 }
 
+.pass_link {
+     color: #bfbfbf;
+	 text-decoration: underline;
+	 font-size: 12px;
+	 padding-left: 28px;
+}
+
+/*спрайт главная карта мыло*/
 
 .sprite{
 	position: relative;
 	overflow: hidden;
 	border: 1px solid #c3c9cc;
 	width: 50px;
-	border-radius: 10px;
-	padding: 7px 10px;
+	border-radius: 37px;
+    padding: 5px 12px;
 }
 .sprite li{
 	float: left;
 }
 .sprite a{
 	display: block;
-	width: 15px;
+	width: 16px;
 	height: 11px;
 	background: url(../img/icone_sprite.png) 0 0 no-repeat;
 }
@@ -113,7 +129,7 @@ section:first-child::before{
 	background-position: -19px 0;
 }
 .sprite .mail{
-	background-position: -39px 0;
+	background-position: -40px 0;
 }
 .sprite a:hover{
 	background-position: 0 -12px;
@@ -122,7 +138,7 @@ section:first-child::before{
 	background-position: -19px -12px;
 }
 .sprite .mail:hover{
-	background-position: -39px -12px;
+	background-position: -40px -12px;
 }
 
 
