--- a/GoIT/markup/home/lesson6/css/style.css
+++ b/GoIT/markup/home/lesson6/css/style.css
@@ -252,27 +252,32 @@ figcaption{
 	text-align: center;
 }
 .icone_list span{
-	background: url(../img/icone_list.png) 0 0 no-repeat; 
+	background: url(../img/icone_list.png) 1% 8% no-repeat; 
     padding-left: 25px;
+    padding-bottom: 25px;
     width: 25px;
-     
     font-size: 13px;
 }
 .icone_list{
 	width: 180px;
 	border: 1px solid #465961;
 	border-radius: 25px;
+	height: 25px;
+	margin-bottom: 15px;
 }
 .icon span{
-	background: url(../img/icon.png) 0 0 no-repeat; 
+	background: url(../img/icon.png) 1% 19%  no-repeat; 
     padding-left: 25px;
     width: 25px;
+    padding-bottom: 25px;
+
     
 }
 .icon {
 	width: 150px;
 	border: 1px solid #465961;
 	border-radius: 25px;
+	height: 25px;
 }
 
 .content li a{
@@ -282,8 +287,9 @@ figcaption{
 }
 .content li{
 	color: #465961;
-	background: url(../img//icone_grey.png) no-repeat 0 4px; 
-    padding-left: 10px;
+	background: url(../img//icone_grey.png) no-repeat 28px 4px;
+    padding-left: 40px;
+    margin: 8px;
 }
 .btn{
 	 width: 80px;
